Fix homepage main content section vertical align (#118)

--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -10,7 +10,6 @@ html {
 }
 
 body {
-  display: flex;
   color: $fg-color;
   background-color: $bg-color;
 	font-family: $text-font-family;
